--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ h1{
 
 .title-img{
     margin-top: 25px;
-    /* height: 600px; */
+    height: 600px;
 }
 
 .title-img img{
@@ -62,6 +62,14 @@ h1{
 /* /Section:TITLE */
 
 /* Section: ARTICLE*/
+.article{
+    margin-top:20px;
+    font-size: 27px;
+}
+
+.article span{
+    background-color: #fdfd00;
+}
 
 /* /Section: ARTICLE*/
 /* /MAIN */
