--- a/css/style-bonus.css
+++ b/css/style-bonus.css
@@ -5,6 +5,13 @@
 }
 /* /RESET */
 
+/* COMMON */
+.container{
+    width: 80%;
+    margin: auto;
+}
+/* /COMMON */
+
 /* HEADER */
 header{
     height: 180px;
@@ -18,7 +25,6 @@ header{
 header img{
     width:300px;
     position:absolute;
-    left:10%;
     top:50%;
 }
 /* /HEADER */
@@ -26,10 +32,6 @@ header img{
 /* MAIN */
 
 /* Section:TITLE */
-.container{
-    width: 80%;
-    margin: auto;
-}
 
 h1{
     font-size: 50px;
